--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,17 @@
 # --- Basic options --- #
 
 # Name of website
-title: My website
+title: Zinia's Homepage
 
 # Short description of your site
-description: A virtual proof that I'm awesome
+description: Hello I'm Zinia
 
 # Your name to show in the footer
-author: Some Person
-
+author: Zinia Deiri
 # --- List of links in the navigation bar --- #
 
 navbar-links:
   About Me: "aboutme"
-  Resources:
-    - Beautiful Jekyll: "https://beautifuljekyll.com"
-    - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
 
 # --- Logo --- #
 
@@ -38,11 +33,11 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
-  email: "someone@example.com"
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
-  rss: true
+#  email: "someone@example.com"
+#  facebook: deanattali
+#  github: daattali
+#  twitter: daattali
+#  rss: true
 #  reddit: yourname
 #  linkedin: daattali
 #  xing: yourname
